[gd_scene load_steps=12 format=3 uid="uid://jp3o8w543uty"]

[ext_resource type="Theme" uid="uid://d0ui076hquyku" path="res://Scene/butoane.tres" id="1_41y13"]
[ext_resource type="Script" path="res://Scripts/seif.gd" id="1_sj4ux"]
[ext_resource type="Texture2D" uid="uid://ci00m0751e3kk" path="res://Sprites/panel.png" id="3_sablf"]
[ext_resource type="Texture2D" uid="uid://hty30d01knbw" path="res://Sprites/butonapasat.png" id="4_gy068"]
[ext_resource type="Texture2D" uid="uid://k6mgx8gmb2sc" path="res://Sprites/buton.png" id="4_hfn5f"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pnguv"]
texture = ExtResource("3_sablf")

[sub_resource type="Theme" id="Theme_v8amq"]
PanelContainer/styles/panel = SubResource("StyleBoxTexture_pnguv")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_g4htw"]
texture = ExtResource("4_gy068")
expand_margin_left = 80.0
expand_margin_right = 80.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_f8upy"]
texture = ExtResource("4_hfn5f")
expand_margin_left = 80.0
expand_margin_right = 80.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4j5p1"]
texture = ExtResource("4_gy068")
expand_margin_left = 80.0
expand_margin_right = 80.0
modulate_color = Color(0.72549, 0.72549, 0.72549, 1)

[sub_resource type="Theme" id="Theme_kswb7"]
Button/styles/hover = SubResource("StyleBoxTexture_g4htw")
Button/styles/normal = SubResource("StyleBoxTexture_f8upy")
Button/styles/pressed = SubResource("StyleBoxTexture_4j5p1")

[node name="seif" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 23.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.635, 0.635)
theme = ExtResource("1_41y13")
script = ExtResource("1_sj4ux")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 417.0
offset_bottom = 203.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_v8amq")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Control4" type="Control" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.62

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Control3" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="up" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 166
text = "▲"

[node name="cf1" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_font_sizes/font_size = 71
text = "9"

[node name="down" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 166
text = "▼"

[node name="Control" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="up2" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 166
text = "▲"

[node name="cf2" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_font_sizes/font_size = 71
text = "9"

[node name="down2" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 166
text = "▼"

[node name="Control2" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="VBoxContainer3" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="up3" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 166
text = "▲"

[node name="cf3" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_font_sizes/font_size = 71
text = "9"

[node name="down3" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 166
text = "▼"

[node name="Control6" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="Control5" type="Control" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="unlock" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme = SubResource("Theme_kswb7")
theme_override_font_sizes/font_size = 106
text = "UNLOCK"

[node name="Control6" type="Control" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.25

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/up" to="." method="_on_up_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/down" to="." method="_on_down_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2/up2" to="." method="_on_up_2_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2/down2" to="." method="_on_down_2_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer3/up3" to="." method="_on_up_3_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer3/down3" to="." method="_on_down_3_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/unlock" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/unlock" to="." method="_on_unlock_pressed"]
